@@ -1,3 +1,8 @@
+2013-04-11  Tim Waugh  <twaugh@redhat.com>
+
+	* src/filterdiff.c: Don't show grepdiff-specific options in
+	help output for filterdiff/lsdiff (bug #948973).
+
 2013-04-02  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in: Version 0.3.3.
